--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     }
 
     .sales-under-limit {
-      color: #c62828;
+      color: #ff3131;
     }
 
     .sales-over-limit {
-      color: #2e7d32;
+      color: #00bf63;
       font-weight: 700;
     }
 
@@ -184,12 +184,12 @@
 
     .limit-message {
       background-color: #ffebee;
-      color: #c62828;
+      color: #ff3131;
       padding: 0.8rem;
       border-radius: 4px;
       margin: 0.5rem 0;
       font-weight: 500;
-      border-left: 4px solid #c62828;
+      border-left: 4px solid #ff3131;
       display: none;
       font-size: 0.85rem;
       line-height: 1.4;
