--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #a5246c;
-      --secondary-color: #ef4560;
-      --accent-color: #f4733e;
+      --primary-color: #147a80;
+      --secondary-color: #bbe7e6;
+      --accent-color: #0d5257;
       --success-color: #00bf63;
       --warning-color: #ff3131;
       --text-color: #333;
@@ -27,7 +27,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 50%, var(--accent-color) 100%);
+      background: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 100%);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -64,7 +64,7 @@
       font-family: 'Comme', sans-serif;
       font-size: 1.8rem;
       font-weight: 700;
-      color: var(--secondary-color);
+      color: var(--primary-color);
       text-align: center;
       margin: 1.5rem 0 1rem;
       padding: 0 1rem;
@@ -83,6 +83,9 @@
       justify-content: space-between;
       margin-bottom: 1rem;
       gap: 0.5rem;
+      background-color: var(--secondary-color);
+      border-radius: 8px;
+      padding: 0.5rem;
     }
 
     .stat-card {
@@ -108,6 +111,7 @@
       margin-bottom: 1rem;
       box-shadow: var(--card-shadow);
       overflow: hidden;
+      border: 1px solid var(--secondary-color);
     }
 
     .recruiter-header {
@@ -127,7 +131,7 @@
     }
 
     .recruiter-rank {
-      background: white;
+      background: var(--secondary-color);
       color: var(--primary-color);
       width: 26px;
       height: 26px;
@@ -145,6 +149,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background-color: rgba(187, 231, 230, 0.1);
     }
 
     .recruited-item:last-child {
@@ -162,7 +167,7 @@
 
     .recruited-plan {
       font-size: 0.85rem;
-      color: #666;
+      color: var(--accent-color);
       display: flex;
       align-items: center;
       gap: 0.3rem;
@@ -228,13 +233,13 @@
     }
 
     .refresh-btn:hover {
-      background-color: #8a1d5a;
+      background-color: var(--accent-color);
       transform: translateY(-2px);
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
 
     .legend {
-      background-color: #f8f8f8;
+      background-color: var(--secondary-color);
       padding: 0.8rem;
       border-radius: 8px;
       margin: 1rem 0;
@@ -271,29 +276,34 @@
       background: white;
       border-radius: 8px;
       box-shadow: var(--card-shadow);
+      border: 1px solid var(--secondary-color);
     }
 
     .filter-controls {
       display: flex;
       gap: 0.5rem;
       margin-bottom: 1rem;
+      background-color: var(--secondary-color);
+      padding: 0.5rem;
+      border-radius: 8px;
     }
 
     .filter-btn {
       flex: 1;
       padding: 0.6rem;
-      border: 1px solid #ddd;
       background: white;
       border-radius: 6px;
       cursor: pointer;
       font-size: 0.85rem;
       transition: all 0.2s;
+      border: none;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
 
     .filter-btn.active {
       background: var(--primary-color);
       color: white;
-      border-color: var(--primary-color);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.15);
     }
 
     @media (max-width: 600px) {
@@ -316,7 +326,7 @@
         text-align: left;
         width: 100%;
         padding-top: 0.5rem;
-        border-top: 1px dashed #eee;
+        border-top: 1px dashed var(--secondary-color);
       }
       
       .filter-controls {
