--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <style>
     :root {
       --primary-color: #147a80;
-      --secondary-color: #bbe7e6;
+      --secondary-color: #beff7d;
       --accent-color: #0d5257;
       --success-color: #00bf63;
       --warning-color: #ff3131;
       --text-color: #333;
       --light-bg: #f8fafc;
       --card-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      --money-color: #147a80; /* Cambiado a #147a80 */
+      --money-color: #147a80;
     }
     
     body {
@@ -28,7 +28,7 @@
     }
 
     header {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--accent-color) 100%);
+      background: linear-gradient(135deg, var(--secondary-color) 0%, var(--primary-color) 100%);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -309,7 +309,7 @@
 
     .money-earned {
       font-weight: 700;
-      color: var(--money-color); /* Usando el color primario */
+      color: var(--money-color);
       font-size: 0.9rem;
       margin-top: 0.5rem;
     }
