--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     header img {
       height: 40px;
-      filter: brightness(0) invert(1) sepia(1) hue-rotate(85deg) saturate(300%) brightness(1.2);
+      filter: invert(86%) sepia(85%) saturate(301%) hue-rotate(18deg) brightness(101%) contrast(101%);
     }
 
     header a {
