--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/novaklar/web/refs/heads/main/Novaklar.svg" alt="Novaklar Logo" />
-    <a href="https://novaklar.github.io/web/"><i class="fas fa-arrow-left"></i> Regresar</a>
+    <a href="https://novaklar.github.io/Personal/"><i class="fas fa-arrow-left"></i> Regresar</a>
   </header>
 
   <h1 class="page-title">Registro y Control</h1>
