--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
-      --primary-color: #147a80;
-      --secondary-color: #beff7d;
+      --primary-color: #00128f;
+      --secondary-color: #6c91ff;
       --accent-color: #0d5257;
       --success-color: #00bf63;
       --warning-color: #ff3131;
       --text-color: #333;
       --light-bg: #f8fafc;
       --card-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      --money-color: #147a80;
+      --money-color: #00128f;
     }
     
     body {
@@ -41,7 +41,7 @@
 
     header img {
       height: 40px;
-      filter: invert(86%) sepia(85%) saturate(301%) hue-rotate(18deg) brightness(101%) contrast(101%);
+      filter: invert(100%); /* Modificado para que el logo sea blanco */
     }
 
     header a {
@@ -89,7 +89,7 @@
     }
 
     .stat-card {
-      background: rgba(190, 255, 125, 0.3);
+      background: rgba(108, 145, 255, 0.3);
       border-radius: 8px;
       padding: 0.8rem;
       box-shadow: var(--card-shadow);
@@ -848,7 +848,6 @@
         errorElement.style.display = 'block';
         noDataElement.style.display = 'none';
         statsBar.style.display = 'none';
-        searchBar.style.display = 'none';
         filterControls.style.display = 'none';
       } finally {
         if (spinInterval) clearInterval(spinInterval);
