--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
   </main>
 
   <script>
-    /* Configuración */
-    const SPREADSHEET_ID = '11jIxfO6Ah2CTRMGXXppwDoOuwC2DJJu9B3K96IW94ew';
+    /* Configuración: SPREADSHEET_ID actualizado según la URL proporcionada */
+    const SPREADSHEET_ID = '12KqUWKpU4OsP77V1gfFDDiCbB4eQFQDdR8sJ_qLk3rI';
     const SHEET_NAME = 'Form Responses 1';
     const RANGE = 'A:F';
     const UPDATE_INTERVAL = 5 * 60 * 1000;
